# azurite-demo

./: azure-queue-client.py  blob_storage_service.py  config.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: test.yml
tests/: conftest.py
tests/integration/: test_blob_storage.py
